# unchained

./: .flake8  .gitignore  Dockerfile  manage.py  pyproject.toml
.github/workflows/: django.yml  test.yml
django_unchained/: asgi.py  settings.py  urls.py  wsgi.py
pages/: tests.py  urls.py  views.py
templates/: base.html
templates/pages/: home.html
