[tool.poetry]
name = "django-unchained"
version = "0.1.0"
description = ""
authors = ["Melvin A. <melvinalmonte@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
flake8 = "^6.1.0"
black = "^23.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
